--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-hook/media-query": "^1.1.1",
     "@reduxjs/toolkit": "^2.2.1",
