--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
