--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^0.2.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "firebase": "^10.8.0",
+    "heic2any": "^0.0.4",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
