detalle de orden + review a productos comprados en la orden

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.0.0-rc22",
     "firebase": "^10.8.0",
     "heic2any": "^0.0.4",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
