--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-chart": "^0.1.2",
+    "react-google-charts": "^4.0.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
